# calculadora_resistencias

./: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  bandas.cpp  bandas.h  main.cpp  resistencia.cpp
components/: Circuitos.qml  Colors.qml  Menu.qml  Ohm.qml  SideBar.qml  SideBarBtn.qml  SideBarGrid.qml
components/Circuitos/: NumResistencias.qml  Resistencias.qml  Valores.qml
components/Colors/: CincoBandas.qml  CuatroBandas.qml  NumBandas.qml  ResistenciaPreview.qml  SeisBandas.qml
components/General/: Background.qml  CardSubtitle.qml  CardTitle.qml  InputGroup.qml  Results.qml  TextField.qml  TextFieldMenu.qml  Title.qml
components/Ohm/: Calc.qml  Valores.qml
components/SideBar/: SideBar.qml  SideBarBtn.qml
config/: launch.json  settings.json
headers/: Circuitos.h  CircuitosControler.h  Colors.h  ColorsControler.h  Controler.h  Ohm.h  OhmControler.h  bandas.h  resistencia.h
scripts/: Circuitos.cpp  CircuitosControler.cpp  ColorsControler.cpp  Controler.cpp  Ohm.cpp  OhmControler.cpp  bandas.cpp  resistencia.cpp
